migration of Map to vavr