@@ -9,10 +9,7 @@ import static com.github.tonivade.resp.protocol.RedisToken.integer;
 import static com.github.tonivade.resp.protocol.RedisToken.string;
 import static com.github.tonivade.resp.protocol.SafeString.safeString;
 import static com.github.tonivade.tinydb.data.DatabaseKey.safeKey;
-import static java.util.stream.Collectors.toList;
-
-import java.util.List;
-import java.util.Map;
+import static java.lang.Integer.parseInt;
 
 import com.github.tonivade.resp.annotation.Command;
 import com.github.tonivade.resp.command.Request;
@@ -24,6 +21,8 @@ import com.github.tonivade.tinydb.command.annotation.ReadOnly;
 import com.github.tonivade.tinydb.data.Database;
 import com.github.tonivade.tinydb.data.DatabaseValue;
 
+import io.vavr.collection.List;
+import io.vavr.collection.Map;
 import io.vavr.collection.Set;
 
 @ReadOnly
@@ -38,16 +37,15 @@ public class RoleCommand implements TinyDBCommand {
   }
 
   private RedisToken slave(Database adminDatabase) {
-    DatabaseValue value = adminDatabase.getOrDefault(safeKey("master"), DatabaseValue.EMPTY_HASH);
-    Map<SafeString, SafeString> hash = value.getValue();
+    Map<SafeString, SafeString> hash = adminDatabase.getHash(safeString("master"));
     return array(string("slave"), 
-                 string(hash.get(safeString("host"))), 
-                 integer(Integer.parseInt(hash.get(safeString("port")).toString())), 
-                 string(hash.get(safeString("state"))), integer(0));
+                 string(hash.get(safeString("host")).get()), 
+                 integer(hash.get(safeString("port")).map(port -> parseInt(port.toString())).get()), 
+                 string(hash.get(safeString("state")).get()), integer(0));
   }
 
   private RedisToken master(Database adminDatabase) {
-    return array(string("master"), integer(0), array(slaves(adminDatabase)));
+    return array(string("master"), integer(0), array(slaves(adminDatabase).toJavaList()));
   }
 
   private List<RedisToken> slaves(Database adminDatabase) {
@@ -55,7 +53,6 @@ public class RoleCommand implements TinyDBCommand {
     Set<SafeString> set = value.getValue();
     return set.map(SafeString::toString)
         .map(slave -> slave.split(":"))
-        .map(slave -> array(string(slave[0]), string(slave[1]), string("0")))
-        .collect(toList());
+        .map(slave -> array(string(slave[0]), string(slave[1]), string("0"))).toList();
   }
 }
